# robot_gazebo

./: CMakeLists.txt
launch/: multi_turtlebot_world.launch  spawn_realsense.launch
launch/includes/: kobuki_realsense.launch.xml
launch/pcl/: concat.launch
robots/: kobuki_hexagons_realsense.urdf.xacro  kobuki_hexagons_velodyne_kinect.urdf.xacro
rviz/: multi_robot.rviz  multi_robot_initialpose.rviz
src/: imu_frame_modifier.cpp  odom_frame_modifier.cpp  odom_frame_modifier_test.cpp
urdf/sensors/: imu_sensor.urdf.xacro
